--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
     "next": "9.5.3",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.10.0",
+    "@types/react": "^16.9.49",
+    "typescript": "^4.0.2"
   }
 }
