--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/node": "^7.10.5",
+    "@babel/preset-env": "^7.11.5",
     "@types/node": "^14.10.0",
     "@types/react": "^16.9.49",
     "typescript": "^4.0.2"
