--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.10.4",
     "@babel/node": "^7.10.5",
     "@babel/preset-env": "^7.11.5",
     "@types/node": "^14.10.0",
